# libsysve

./: 404.html  Doxyfile.in  Makefile.am  README  annotated.html  annotated.js  autogen.sh  classes.html  configure.ac  dir_2cb29b8588a54cdf2973117125e77c4b.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d28a4824dc47e487b107a5db32ef43c4.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_f177ce2f44f83ce77e378c0b4efde7af.html  examples.html  examples.js  group__misc.html  group__misc.js  group__veaccio.html  group__veaio.html  group__veaio.js  group__vedma.html  group__vedma.js  group__vhcall.html  group__vhcall.js  group__vhshm.html  group__vhshm.js  index.html  libsysve.spec.in  md_doc_VEAIO.html  md_doc_VEDMA.html  md_doc_VHCall.html  modules.html  modules.js  navtree.js  navtreeindex0.js  pages.html  structve__dma__handle__t.html  structve__dma__handle__t.js  vedma_2Makefile-example.html  (+10 more)
debian/: control.in  copyright.in  libsysve-dev.install.in  libsysve.install.in  rules.in
doc/: VEAIO.md  VEDMA.md  VEPCI.md  VHCall.md
examples/vedma/: Makefile  dma.c  mkshm.c  rdshm.c
examples/vhcall/: Makefile  libdatatransfer.c  libvhhello.c  libvhhello.f  libvhhello.f90  sample1.c  sample2.c
include/: libsysve.h  libvhcall.h  userdma.h  veaio.h  vecr.h  vedma.h  vepci.h  veshm.h  vhshm.h
src/: Makefile.am  accelerated_io.c  libsysve.c  libsysve_atomic.s  libsysve_utils.h  libsysve_vec_memcpy.S  libuserdma.c  libveaio.c  libvecr.c  libvedma.c  libvepci.c  libveshm.c  libvhcall.c  libvhshm.c  rodata.s  vedma_impl.h  vedma_init.c  vedma_main.S
